tests/errors/bad_jmp.s

# Jumping at a bad point
main:
    jmp 100

